--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.13.0",
-    "library": "../library",
+    "library": "github:mehulchopraAvalara/library",
     "loader.js": "^4.2.3"
   },
   "engines": {
